--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-headroom": "^2.1.2",
-    "react-helmet": "^3.1.0"
+    "react-helmet": "^3.1.0",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "^3.18.0",
