--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Christian Le",
   "dependencies": {
+    "classnames": "^2.2.5",
     "front-matter": "^2.0.7",
     "gatsby": "^0.12.6",
     "history": "^2.0.2",
@@ -21,7 +22,8 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
-    "gh-pages": "^0.11.0"
+    "gh-pages": "^0.11.0",
+    "react-fontawesome": "^1.6.1"
   },
   "keywords": [
     "gatsby"
