--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "front-matter": "^2.0.7",
     "gatsby": "^0.12.6",
     "history": "^2.0.2",
+    "lodash": "^4.17.4",
     "object-assign": "^4.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
