--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "deploy": "gatsby build --prefix-links && gh-pages -d public",
+    "deploy": "gatsby build --prefix-links && cp ./CNAME ./public/CNAME && gh-pages -d public",
     "dev": "gatsby develop",
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
