installed google analytics and removed package-lock.json

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "gatsby-plugin-google-analytics": "^1.0.7",
     "gh-pages": "^0.11.0",
     "react-fontawesome": "^1.6.1"
   },
